force-app/main/default/objects/Call_Experience__c/Call_Experience__c.object-meta.xml
<CustomObject>
    <description>This object is used to manage the IVR greetings and queue routings for Service Cloud Voice with Amazon Connect</description>
    <label>Call Experience</label>
    <nameField>
        <label>Experience Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Experiences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>