force-app/main/default/objects/Call_Experience__c/fields/After_Hours_Action__c.field-meta.xml
<CustomField>
    <fullName>After_Hours_Action__c</fullName>
    <inlineHelpText>If after hours, choose which action to perform</inlineHelpText>
    <label>After Hours Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Voicemail</fullName>
            </value>
            <value>
                <fullName>External Transfer</fullName>
            </value>
            <value>
                <fullName>Invoke Contact Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>