force-app/main/default/objects/Call_Experience__c/fields/Agent_Unavailability_Prompt_optional__c.field-meta.xml
<CustomField>
    <fullName>Agent_Unavailability_Prompt_optional__c</fullName>
    <description>This prompt will be played in the case when there is no agent staffed for a particular queue.</description>
    <inlineHelpText>This prompt will be played in the case when there is no agent staffed for a particular queue.</inlineHelpText>
    <label>Agent Unavailability Prompt (optional)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>