force-app/main/default/objects/Call_Experience__c/fields/Alternate_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone_Number__c</fullName>
    <formula>Language_Setup__r.Alternate_Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternate Phone Number</label>
    <type>Text</type>
</CustomField>