force-app/main/default/objects/Call_Experience__c/fields/Contact_Flow_ARN__c.field-meta.xml
<CustomField>
    <fullName>Contact_Flow_ARN__c</fullName>
    <label>Contact Flow ARN</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>