force-app/main/default/objects/Call_Experience__c/fields/DTMF_Option__c.field-meta.xml
<CustomField>
    <fullName>DTMF_Option__c</fullName>
    <inlineHelpText>DTMF Option used for language selection. If the Multi-Lingual checkbox is not selected, it will default the DTMF Option to 1.</inlineHelpText>
    <label>DTMF Option</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Used_in_Multi_Lingual_Setup__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>