force-app/main/default/objects/Call_Experience__c/fields/Emergency_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Prompt__c</fullName>
    <description>Prompt that will be played when &quot;is Emergency?&quot; is set to true.</description>
    <inlineHelpText>Prompt that will be played when &quot;is Emergency?&quot; is set to true.</inlineHelpText>
    <label>Emergency Prompt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>