force-app/main/default/objects/Call_Experience__c/fields/Error_Handling_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Error_Handling_Prompt__c</fullName>
    <inlineHelpText>This prompt will be played when there is an error in the IVR.</inlineHelpText>
    <label>Error Handling Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>