force-app/main/default/objects/Call_Experience__c/fields/Fallback_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Fallback_Prompt__c</fullName>
    <inlineHelpText>Fallback prompt will be played when all the repetition of menu retries complete.</inlineHelpText>
    <label>Fallback Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>