force-app/main/default/objects/Call_Experience__c/fields/Greeting_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Greeting_Prompt__c</fullName>
    <description>Optional greeting.</description>
    <inlineHelpText>Optional greeting prompt. Place some text if you want to play any message (Text To Speech) after the language selection in IVR.</inlineHelpText>
    <label>Greeting Prompt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>