force-app/main/default/objects/Call_Experience__c/fields/Holiday_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Prompt__c</fullName>
    <inlineHelpText>Prompt played when there is a holiday defined in the selected Business Hours.</inlineHelpText>
    <label>Holiday Prompt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>