force-app/main/default/objects/Call_Experience__c/fields/IM_Division__c.field-meta.xml
<CustomField>
    <fullName>IM_Division__c</fullName>
    <inlineHelpText>Please select the IM Division that corresponds with this Call Experience Record. For example, Digital = IM Digital;
IMAP = Asia Pacific;
IME = Europe;
IMLA = Latin America;
IMNA = North America;
BPM = Business Process Management</inlineHelpText>
    <label>IM Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IMAP</fullName>
            </value>
            <value>
                <fullName>IME</fullName>
            </value>
            <value>
                <fullName>IMLA</fullName>
            </value>
            <value>
                <fullName>IMNA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>