force-app/main/default/objects/Call_Experience__c/fields/Immediate_Transfer_To__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Transfer_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If you want to skip the IVR experience when a customer calls in and directly transfer the call to a queue or a phone number, then store the Call Transfer record in this field.</description>
    <inlineHelpText>Skip IVR experience and transfer call to</inlineHelpText>
    <label>Immediate Transfer To</label>
    <referenceTo>Transfer__c</referenceTo>
    <relationshipLabel>Call Experiences</relationshipLabel>
    <relationshipName>Call_Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>