force-app/main/default/objects/Call_Experience__c/fields/Intent_Capture_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Intent_Capture_Prompt__c</fullName>
    <label>Intent Capture Prompt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>