force-app/main/default/objects/Call_Experience__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the record is inactive, then it will not be considered for customization of the IVR experience by Amazon Connect flows.</description>
    <inlineHelpText>Identifies if the record is used in IVR experience customization</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>