force-app/main/default/objects/Call_Experience__c/fields/Language_Setup__c.field-meta.xml
<CustomField>
    <fullName>Language_Setup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Language Setup</label>
    <referenceTo>Language_Setup__c</referenceTo>
    <relationshipLabel>Call Experiences</relationshipLabel>
    <relationshipName>Call_Experiences</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>