force-app/main/default/objects/Call_Experience__c/fields/Menu_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Menu_Prompt__c</fullName>
    <description>Message played after greeting if immediate transfer is unchecked.</description>
    <inlineHelpText>Message played after greeting if immediate transfer is unchecked. (Text to Speech)</inlineHelpText>
    <label>Menu Prompt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>