force-app/main/default/objects/Call_Experience__c/fields/Menu_Prompt_ARN__c.field-meta.xml
<CustomField>
    <fullName>Menu_Prompt_ARN__c</fullName>
    <description>You can save a text message for Menu Prompt OR select the ARN of a prompt stored in Amazon Connect instance.</description>
    <inlineHelpText>Amazon Connect Prompt ARN if you want use Amazon Connect resources</inlineHelpText>
    <label>Menu Prompt ARN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>