force-app/main/default/objects/Call_Experience__c/fields/Menu_Prompt_Exists__c.field-meta.xml
<CustomField>
    <fullName>Menu_Prompt_Exists__c</fullName>
    <formula>BEGINS(Menu_Prompt_ARN__c, &quot;arn:aws:connect&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Menu Prompt Exists</label>
    <type>Checkbox</type>
</CustomField>