force-app/main/default/objects/Call_Experience__c/fields/Off_hours_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Off_hours_Prompt__c</fullName>
    <description>Prompt to speak if caller contact outside the business hours.</description>
    <inlineHelpText>Prompt to speak if caller contact outside the business hours.</inlineHelpText>
    <label>Off-hours Prompt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>