force-app/main/default/objects/Call_Experience__c/fields/Primary_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone_Number__c</fullName>
    <formula>Language_Setup__r.Primary_Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Phone Number</label>
    <type>Text</type>
</CustomField>