force-app/main/default/objects/Call_Experience__c/fields/Recording_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>Recording_Opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The ability to opt-in or opt-out of being recorded. If enabled, then populate the Recording Opt-in Message.</description>
    <inlineHelpText>The ability to opt-in or opt-out of being recorded. If enabled, then populate the Recording Opt-in Message.</inlineHelpText>
    <label>Recording Opt-in</label>
    <type>Checkbox</type>
</CustomField>