force-app/main/default/objects/Call_Experience__c/fields/Recording_Opt_in_Message__c.field-meta.xml
<CustomField>
    <fullName>Recording_Opt_in_Message__c</fullName>
    <description>The prompt played to the customer to select either 1 or 2 to be recorded. By default, the IVR will not record upfront, if the caller presses 1, then recording will start, however, if the caller times out or presses 2, then the recording will be left off by default.</description>
    <inlineHelpText>The prompt played to the customer to select either 1 or 2 to be recorded. By default, the IVR will not record upfront, if the caller presses 1, then recording will start, however, if the caller times out or presses 2, then the recording will be left off by default.</inlineHelpText>
    <label>Recording Opt-in Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>