force-app/main/default/objects/Call_Experience__c/fields/Retry_Prompt_1__c.field-meta.xml
<CustomField>
    <fullName>Retry_Prompt_1__c</fullName>
    <inlineHelpText>Retry Prompt played if the caller pressed any invalid menu option for the first time.</inlineHelpText>
    <label>Retry Prompt 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>