force-app/main/default/objects/Call_Experience__c/fields/Used_in_Multi_Lingual_Setup__c.field-meta.xml
<CustomField>
    <fullName>Used_in_Multi_Lingual_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this checkbox if this call experience is going to be used in a Multi-Lingual setup i.e. if you are defining one of the languages of the IVR through this record.</inlineHelpText>
    <label>Used in Multi Lingual Setup?</label>
    <type>Checkbox</type>
</CustomField>