force-app/main/default/objects/Call_Experience__c/fields/Voicemail_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Voicemail_Prompt__c</fullName>
    <description>Prompt played to the customer when After Hours Voicemail is enabled.</description>
    <inlineHelpText>Prompt played to the customer when After Hours Voicemail is enabled.</inlineHelpText>
    <label>Voicemail Prompt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>