force-app/main/default/objects/Call_Experience__c/fields/Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the Business Hours for an IVR experience.</description>
    <inlineHelpText>Business Hours attached to a phone number experience</inlineHelpText>
    <label>Working Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipLabel>Call Experiences</relationshipLabel>
    <relationshipName>Call_Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>