force-app/main/default/objects/Call_Experience__c/validationRules/Check_Valid_Call_Experience.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Valid_Call_Experience</fullName>
    <active>true</active>
    <errorConditionFormula>Valid_Call_Experience__c  = false</errorConditionFormula>
    <errorMessage>Call Experiences record having the same DTMF Option can not be linked to same Language Setup Record.</errorMessage>
</ValidationRule>