force-app/main/default/objects/Call_Experience__c/listViews/Details.listView-meta.xml
<ListView>
    <fullName>Details</fullName>
    <columns>NAME</columns>
    <columns>Working_Hours__c</columns>
    <columns>Immediate_Transfer_To__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Details</label>
</ListView>