force-app/main/default/objects/Call_Experience__c/listViews/IMNA_Call_Experience.listView-meta.xml
<ListView>
    <fullName>IMNA_Call_Experience</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Immediate_Transfer_To__c</columns>
    <columns>Working_Hours__c</columns>
    <columns>Primary_Phone_Number__c</columns>
    <columns>SCV_Origin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>IMLA</value>
    </filters>
    <label>IMNA Call Experience</label>
</ListView>