force-app/main/default/objects/Call_Experience__c/listViews/Voicemail_Call_Experiences.listView-meta.xml
<ListView>
    <fullName>Voicemail_Call_Experiences</fullName>
    <columns>NAME</columns>
    <columns>After_Hours_Action__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>After_Hours_Action__c</field>
        <operation>equals</operation>
        <value>Voicemail,External Transfer</value>
    </filters>
    <label>Voicemail and External Call Experiences</label>
</ListView>